--- a/app/views/index.html
+++ b/app/views/index.html
@@ -27,6 +27,7 @@
 
     <!-- Add your site or application content here -->
     <div class="container" ng-include="'partials/main'" ng-controller="MainCtrl"></div>
+    <div class="container" ng-include="partials/scores" ng-controller="SoccerScoresCtrl"></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
@@ -59,9 +60,11 @@
         <script src="scripts/controllers/login.js"></script>
         <script src="scripts/controllers/signup.js"></script>
         <script src="scripts/controllers/settings.js"></script>
+        <script src="scripts/controllers/scores.js"></script>
         <script src="scripts/services/auth.js"></script>
         <script src="scripts/services/session.js"></script>
         <script src="scripts/services/user.js"></script>
+        <script src="scripts/services/scores.js"></script>
         <script src="scripts/directives/mongooseError.js"></script>
         <!-- endbuild -->
 </body>
