--- a/app/views/partials/navbar.html
+++ b/app/views/partials/navbar.html
@@ -4,5 +4,5 @@
         <a ng-href="{{item.link}}">{{item.title}}</a>
     </li>
   </ul>
-  <h3 class="text-muted">yeniKlasor</h3>
+  <h3 class="text-muted">sampleApp</h3>
 </div>
